--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -6,27 +6,19 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th>Movie Title</th>
+      <th class = "#{hilight('title')}"><%= sortable "title", "Title"%></th>
       <th>Rating</th>
-      <th>Release Date</th>
+      <th class = "#{hilight('release_date')}"><%= sortable "release_date", "Release Date"%></th>
       <th>More Info</th>
     </tr>
   </thead>
   <tbody>
-    <% @movies.each do |movie| %>
+    <% @movies.each do |mov| %>
       <tr>
-        <td>
-          <%= movie.title %>
-        </td>
-        <td>
-          <%= movie.rating %>
-        </td>
-        <td>
-          <%= movie.release_date %>
-        </td>
-        <td>
-          <%= link_to "More about #{movie.title}", movie_path(movie) %>
-        </td>
+        <td><%= mov.title %></td>
+        <td><%= mov.rating %></td>
+        <td><%= mov.release_date %></td>
+        <td><%= link_to "More about #{mov.title}", movie_path(mov) %></td>
       </tr>
     <% end %>
   </tbody>
