--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -6,9 +6,9 @@
 <table class="table table-striped col-md-12" id="movies">
   <thead>
     <tr>
-      <th id="title_header"><%= sortable "title", "Title"%></th>
+      <th class="<%= 'hilite bg-warning' if params[:sort] == 'title'%>" id="title_header"><%= sortable "title", "Title"%></th>
       <th>Rating</th>
-      <th id="release_date_header"><%= sortable "release_date", "Release Date"%></th>
+      <th class="<%= 'hilite bg-warning' if params[:sort] == 'release_date'%>" id="release_date_header"><%= sortable "release_date", "Release Date"%></th>
       <th>More Info</th>
     </tr>
   </thead>
