--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -1,7 +1,14 @@
 <!--  This file is app/views/movies/index.html.erb -->
 <h2>All Movies</h2>
 
-<%#  Part 1: Start here... %>
+<%= form_tag movies_path, :id => "ratings_form", :method => :get do %>
+  Include:
+  <%- @all_ratings.each do |rating| %>
+    <%= rating %>
+    <%= check_box_tag "ratings[#{rating}]", :id => "ratings_#{rating}" %>
+  <% end %>
+  <%= submit_tag 'Refresh', :id => "ratings_submit", :class => 'btn btn-primary' %>
+<% end %>
 
 <table class="table table-striped col-md-12" id="movies">
   <thead>
